# vision-inference

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  docker_run_inference_e2e_example.sh  versions.env
.githooks/: pre-commit  pre-push
.github/: copilot-instructions.md
.github/actions/fetch-neuriplo-versions/: action.yml
.github/actions/install-linux-deps/: action.yml
.github/workflows/: branch-policy.yml  ci.yml  claude-review.yml  release-check.yml  release-guard.yml
app/: CMakeLists.txt
app/inc/: AppConfig.hpp  utils.hpp
app/src/: CommandLineParser.cpp  VisionApp.cpp  VisionAppProcessing.cpp  VisionAppRendering.cpp  VisionAppTaskRouting.cpp  utils.cpp
app/test/: CMakeLists.txt  test_VisionApp.cpp  test_docker_run_inference_e2e_example.sh  test_parseCommandLineArguments.cpp  test_utils.cpp
cmake/: DependencyValidation.cmake  LinkBackend.cmake  SetCompilerFlags.cmake  versions.cmake
docker/: Dockerfile.libtensorflow  Dockerfile.onnxruntime  Dockerfile.openvino  Dockerfile.tensorrt
docs/: ARCHITECTURE.md  DependencyManagement.md  ExportInstructions.md  Roadmap.md  TablePage.md  Versioning.md
ops/: CLUSTER_MAP.yaml  PR_EVIDENCE_TEMPLATE.md  README.md  policies.yaml
ops/repo-meta/: neuriplo.yaml  videocapture.yaml  vision-core.yaml  vision-inference.yaml
ops/runbooks/: ci-triage.md  cross-repo-api-migration.md
scripts/: cut_release.sh  setup_dependencies.sh  sync_supported_model_types.py  validate_release_pins.sh
